--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ a {
     color: rgba(255, 0, 0, 0.623);
 }
 
+.col{
+    vertical-align: top;
+}
+
+
 
 .navbar-custom {
     background-color: #303030;
